core/unpackaged/main/default/objects/LoggerParameter__mdt/LoggerParameter__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure key-value pair parameters in Nebula Logger to control systemwide features</description>
    <label>Logger Parameter</label>
    <pluralLabel>Logger Parameters</pluralLabel>
</CustomObject>