core/unpackaged/main/default/objects/LoggerParameter__mdt/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>A place to store any comments or notes about customizations that have been made to this LoggerParameter__mdt in the current org. This is purely for documentation purposes.</inlineHelpText>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>