core/unpackaged/main/default/objects/LoggerParameter__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Value__c</columns>
    <columns>Description__c</columns>
    <columns>Comments__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>